@@ -1,3 +1,8 @@
+2010-07-26  Karl Berry  <karl@gnu.org>
+
+	* util/gendocs.sh: pass SETLANG to texi2dvi invocations, too.
+	Report from Ales Cepek, 26 Jul 2010 14:24:24.
+
 2010-07-26  Patrice Dumas  <pertusus@free.fr>
 
 	* doc/texinfo.txi (makeinfo Configuration Variables)
